test: migrate all tests off Neo4jContentPersistenceAdapter
Update FakeContentPersistencePort to expose typed inner delegates
(asChapterRepo, asChunkRepo, asSceneRepo, etc.) to work around Java
type-erasure on the repository interface. Update all 11 test classes
to inject typed repository mocks directly. Fix stubbing gaps that
caused NPE and UnnecessaryStubbingException failures.

248 tests passing, 0 failures.